# pet2026

./: package-lock.json  package.json  pnpm-lock.yaml  svelte.config.js
src/: ChatBubble.ts  PetSprite.ts  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  windows.rs
src/routes/: +page.svelte
src/routes/panel/: +page.svelte
static/: Frog_1.json  Frog_4.json
